# sol

./: .gitignore  .project  CMakeLists.txt  DataSet_Converter.h  Params.cpp  Params.h  README.md  SOL  batch.sh  data_analysis.cpp  demo.py  draw.m  main.cpp  makefile  release.notes.txt  run_experiment.py  test  test.cpp  util.h
common/: global.h  init_param.h  md5.h  util.h
data/: DataPoint.h  DataReader.h  DataSet.h  DataSetHelper.h  MNISTReader.h  libsvm_binary.h  libsvmread.h  makefile  s_array.h  test.cpp  thread_primitive.h
doc/: SOL_tutorial.tex  index.html  index.md  makefile  reference.bib
doc/figs/: framework.pptx
exp/: CV.py  CV_caltech.py  batch_cv.py  batch_cv_caltech.py  batch_cv_large.py  batch_draw.m  dataset.py  demo.py  demo_batch.py  demo_caltech.py  demo_large.py  demo_util.py  dist.m  draw.m  draw_convergence.m  draw_time.m  exe_path.py  extract_predicts.py  l1_def.py  libsvm2vw.py  run_bif.py  run_experiment.py  run_fgm.py  run_liblinear.py  run_mRMR.py  run_ofs.py  run_sol.py  run_util.py  run_vw.py  search_space.py  sgd_comp.py  sol_shuffle.py  util.py  vw  vw_process  vw_util.py
exp/.libs/: lt-vw
exp/caltech.scripts/: batch_cv_caltech.py  demo_caltech.py
exp/rcv1/: demo.py  l1_def.py  run_util.py  vw_l1_def.py
exp_mp/: CV.py  batch_cv.py  batch_draw.m  dataset.py  draw.m  draw_convergence.m  draw_time.m  l1_def.py  liblinear_util.py  mpol.py  run_mpol.py  run_util.py
exp_no_cache/: batch_cv_base_relathe.py  batch_cv_real_sim.py  batch_cv_synthetic.py  dataset.py  demo.py  demo_large_scale.py  demo_online.py  demo_online_large.py  draw.m  draw_batch.m  draw_time.m  draw_time_online.m  exe_path.py  l1_def.py  run_experiment.py  run_fgm.py  run_util.py
exp_ofs/: batch_cv.py  batch_cv_large.py  batch_cv_medium.py  batch_cv_synthetic.py  batch_draw.m  dataset.py  demo.py  demo_batch.py  demo_large_scale.py  demo_medium_arow_for_mrmr.py  demo_mrmr.py  demo_online.py  demo_online_large.py  demo_synthetic.py  demo_synthetic_estimate.py  draw.m  draw_convergence.m  draw_large.m  draw_medium.m  draw_online.m  draw_time.m  draw_time_medium.m  draw_time_online.m  exe_path.py  fgm_util.py  l1_def.py  my_split.m  parse_vw_model.py  run_experiment.py  run_experiment_for_mrmr.py  run_fgm.py  run_liblinear.py  run_mRMR.py  run_util.py  vw_util.py
exp_ofs/exp_no_cache/: batch_draw.m  demo_large_scale.py  demo_medium_arow_for_mrmr.py  demo_online.py  demo_online_large.py  demo_synthetic.py  demo_webspam.py  draw_time.m  draw_time_online.m  exe_path.py
exp_ofs/exp_synthetic_test_time/: dataset.py  demo_synthetic.py  exe_path.py
exp_sol/: batch_cv.py  batch_draw.m  dataset.py  demo.py  dist.m  draw.m  draw_convergence.m  draw_time.m  my_split.m  run_liblinear.py
loss/: HingeLoss.h  LogisticLoss.h  LossFunction.h  SquareLoss.h
math/: SAROW.aux  SAROW.tex
optimizer/: ASM_DM.h  ASM_L1.h  Ada_FOBOS.h  Ada_RDA.h  DAROW.h  FOBOS.h  Optimizer.h  RDA_L1.h  SGD.h  SGD_QN.h  STG.h  test.cpp
src/: BOC.h  CMakeLists.txt  DataSet_Converter.h  Params.cpp  Params.h  SOL  SOL_interface.cpp  SOL_interface.h  SOLdll.h  SOLstatic.h  SyntheticData.cpp  analysis  data_analysis.cpp  main.cpp  makefile
src/algorithms/: AROW_AdaFS.h  AROW_DA.h  AROW_FS.h  AROW_TG.h  ASAROW.h  Ada_FOBOS.h  Ada_RDA.h  DAROW.h  FOBOS.h  FOFS.h  HeapList.h  LearnModel.h  MaxHeap.h  MinHeap.h  ModelInfo.h  NSOFS.h  OFSGD.h  Optimizer.h  PET.h  RDA_L1.h  SCW_RDA.h  SGD_FS.h  SOFS.h  SOSOL.h  SSAROW.h  STG.h  algo_header.h  mRMR_OGD.h  sol_algorithms.h
src/algorithms/om/: OnlineModel.h  om_header.h
src/algorithms/om/olm/: DAROW.h  OnlineLinearModel.h  SGD.h  olm_header.h
src/algorithms/om/olm/ofs/: FOFS.h  OnlineFeatureSelection.h  PET.h  PreSelOGD.h  SOFS.h  ofs_header.h
src/algorithms/om/olm/solm/: AROW_AdaFS.h  AROW_DA.h  AROW_TG.h  Ada_FOBOS.h  Ada_RDA.h  CW_RDA.h  CW_TG.h  DAROW.h  FOBOS.h  FOFS.h  ModelInfo.h  PET.h  RDA.h  RDA_L1.h  SCW.h  SCW_RDA.h  SGD.h  SOFS.h  SOSOL.h  STG.h  SparseOnlineLinearModel.h  mRMR_OGD.h  (+2 more)
src/analysis/: data_analysis.cpp
src/common/: ezOptionParser.hpp  global.h  init_param.h  util.h
src/converter/: Converter.cpp  Converter.h  Params.cpp  Params.h  conv.txt
src/data/: Cacher.cpp  DataPoint.h  DataReader.h  DataSet.h  DataSetHelper.h  MNISTReader.h  basic_io.cpp  basic_io.h  data_analysis.cpp  gzip_io.cpp  gzip_io.h  io_interface.h  libsvm_binary.h  libsvm_binary.h.bak  libsvmread.h  makefile  parser.h  s_array.h  test.cpp  thread_primitive.h  zlib_io.cpp  zlib_io.h
src/data/bak/: libsvm_binary.h  libsvm_binary_helper.h  libsvm_binary_helper.h.bak
src/dtcleaner/: dtcleaner.cpp
src/io/: BatchDataSet.h  DataChunk.h  DataHandler.h  DataPoint.h  DataReader.h  DataSet.h  DataSetHelper.h  MPBuffer.h  MPChunk.h  MPDataSet.h  OnlineBuffer.h  OnlineDataSet.h  OnlineDataSetHelper.h  OnlineMPBuffer.h  OnlineMPDataSet.h  basic_io.cpp  basic_io.h  binary_io.h  comp.h  csv_io.h  io_header.h  io_helper.h  io_interface.h  libsvm_binary.h  libsvm_io.h  parser.h  s_array.h  sol_io.h  test.cpp
src/io/mnist/: MNISTReader.h
src/loss/: HingeLoss.h  LogisticLoss.h  LossFunction.h  MaxScoreHingeLoss.h  MaxScoreSquaredHingeLoss.h  SquareLoss.h  SquaredHingeLoss.h  UniformHingeLoss.h  UniformSquaredHingeLoss.h  loss_header.h  sol_loss.h
src/optimizer/: ASAROW.h  ASAROW.h.linear  Ada_FOBOS.h  Ada_RDA.h  CW_RDA.h  DAROW.h  FOBOS.h  HeapList.h  OFSGD.h  Optimizer.h  RDA_L1.h  SAROW.h  SCW.h  SCW_RDA.h  SGD.h  SGD_QN.h  SSAROW.h  STG.h  makefile  test.cpp
src/optimizers/: OnlineOptimizer.h  Optimizer.h  opt_header.h
src/optimizers/bak/: Optimizer - Copy.h
src/utils/: MaxHeap.h  MinHeap.h  Params.cpp  Params.h  config.h  error.h  ezOptionParser.hpp  init_param.h  md5.h  reflector.h  s_array.h  thread_primitive.h  util.h
test/: CMakeLists.txt
test/testDll/: testDll.cpp
test/testMNIST/: MNISTReader.h  testMNIST.cpp
test/testStatic/: testStatic.cpp
tools/: libsvm2arff.py  libsvm2vw.py  libsvm_format.py  rand.py  sol_normalize.py  sol_rand_split.py  sol_sample.py  sol_split.py
vs/: SOL.psess  SOL.sln
vs/SOL/: SOL.vcxproj  SOL.vcxproj.filters
